2009-11-18  Vincent Torri  <doursse at users dot sf dot net>

	* AUTHORS:
	add some authers...

	* configure.ac:
	* src/bin/Makefile.am:
	* src/lib/Makefile.am:
	* src/plugins/Makefile.am:
	* src/plugins/epsilon (deleted):
	* src/plugins/epsilon/epsilon_thumbnailer.c (deleted):
	* src/plugins/epsilon/Makefile.am (deleted):
	* src/plugins/epsilon/.cvsignore (deleted):
	* src/lib/etk_pdf.c (deleted):
	* src/lib/etk_pdf.h (deleted):
	* src/bin/epdf_etk_test.c (deleted):
	* epdf-etk.pc.in (deleted):
	remove etk and epsilon support

2009-11-07  Vincent Torri  <doursse at users dot sf dot net>

	* src/lib/epdf_document.cpp:
	* src/lib/epdf_document.h:
	* src/bin/epdf_evas_test.c:
	* configure.ac:
	poppler 0.12 introduced an API breakage when getting
	the version of the PDF document

2009-10-05  Vincent Torri  <doursse at users dot sf dot net>

	reviewed by: Vincent Torri
	patch by: Mikhail Gusarov

	* src/lib/epdf_main.cpp:
	* src/lib/epdf_main.h:

2009-09-12  Gustavo Barbieri

	* src/lib/epdf_main.cpp:
	use eina_init() instead of eina_list_init(), which
	is deprecated now.

2009-06-14  Gustavo Barbieri

	* src/lib/esmart_pdf.h:
	* src/lib/esmart_pdf.c:
	update to Eina_Bool

2009-05-14  Vincent Torri  <doursse at users dot sf dot net>

	reviewed by: Vincent Torri
	patch by: Rawnar, modified by Vincent Torri

	* src/lib/epdf_main.cpp:
	do not pass NULL to GlobalParams()

	* src/lib/esmart_pdf.c:
	* src/lib/ewl_pdf.c:
	add epdf_init() and epdf_shutdown() calls to init and
	shutdown of the esmart and ewl objects

2009-05-14  Vincent Torri  <doursse at users dot sf dot net>

	* configure.ac:
	requires poppler >= 0.10

2009-03-29  Vincent Torri  <doursse at users dot sf dot net>

	* src/lib/epdf_document.cpp:
	* src/lib/epdf_main.cpp:
	move initialization of globalParams from
	epdf_document to epdf_main

	* src/lib/epdf_page.cpp:
	initialize list to NULL

2009-03-28  Vincent Torri  <doursse at users dot sf dot net>

	* src/bin/epdf_evas_test.c:
	* src/lib/Epdf.h: